# journaling-mcp

./: CLAUDE.md  README.md  main.py  pyproject.toml  server.py
journal/: conversations.db
src/journaling_mcp/: __init__.py  main.py  server.py
src/journaling_mcp/config/: __init__.py  settings.py
src/journaling_mcp/exceptions/: __init__.py  base.py  config.py  journal.py
src/journaling_mcp/models/: __init__.py  conversation.py  database.py  journal.py
src/journaling_mcp/services/: __init__.py  conversation_service.py  database_service.py  journal_service.py
src/journaling_mcp/utils/: __init__.py  logging.py
